<resources>
    <string name="app_name">Test4ksoft</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info">info</string>
    <string name="filter">filter</string>
    <string name="nameActivity">Кофе</string>
    <string name="ordering">Повторить последний заказ</string>
    <string name="name">Имя</string>
    <string name="number">Телефон</string>
    <string name="adress">Адрес</string>
    <string name="card">Карта</string>
    <string name="cardNumber">Номер карточки</string>
    <string name="security">Безопасность</string>
    <string name="order_history">История заказов</string>
    <string name="region">Область</string>
    <string name="city">Город</string>
    <string name="index">индекс</string>
    <string name="street">улица</string>
    <string name="house">дом</string>
    <string name="apartment">квартира</string>
    <string name="city_example">г. Житомир</string>
    <string name="streat_example">ул. Витрука 2</string>
    <string name="delivery">Доставка</string>
    <string name="save">SAVE</string>
    <string name="error">Заполните поле</string>

    <string name="city_value">г. %1$s</string>
    <string name="street_value">ул. %1$s %2$s, кв. %3$s</string>
    <string name="warning">Вы точно хотите удалить!</string>
</resources>
