<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vadym.test4ksoft.fragments.ProfileFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="@+id/card"
        app:layout_constraintTop_toBottomOf="@+id/card">

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
            app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/numberText"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/number"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
            app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <View
            android:id="@+id/separator"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberText" />

        <TextView
            android:id="@+id/adress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:text="@string/adress"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
            app:layout_constraintTop_toBottomOf="@+id/separator" />

        <Button
            android:id="@+id/nextAdress"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/go_next"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/adress"
            app:layout_constraintTop_toBottomOf="@+id/separator" />

        <TextView
            android:id="@+id/adressTextView"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
            app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
            app:layout_constraintTop_toBottomOf="@+id/nextAdress"
            tools:text="ул. Витрука 12" />

        <View
            android:id="@+id/separator2"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adressTextView" />

        <TextView
            android:id="@+id/card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:text="@string/card"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
            app:layout_constraintTop_toBottomOf="@+id/separator2" />

        <Button
            android:id="@+id/nextAdress2"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/go_next"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/card"
            app:layout_constraintTop_toBottomOf="@+id/separator2" />

        <TextView
            android:id="@+id/cardNumberTextView"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
            app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
            app:layout_constraintTop_toBottomOf="@+id/nextAdress2"
            tools:text="@string/cardNumber" />

        <View
            android:id="@+id/separator4"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardNumberTextView" />

        <TextView
            android:id="@+id/security"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:text="@string/security"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
            app:layout_constraintTop_toBottomOf="@+id/separator4" />

        <Button
            android:id="@+id/nextAdress3"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/go_next"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/security"
            app:layout_constraintTop_toBottomOf="@+id/separator4" />

        <View
            android:id="@+id/separator5"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nextAdress3" />

        <TextView
            android:id="@+id/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:text="@string/order_history"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
            app:layout_constraintTop_toBottomOf="@+id/separator5" />

        <Button
            android:id="@+id/nextAdress4"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/go_next"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/order"
            app:layout_constraintTop_toBottomOf="@+id/separator5" />

        <android.support.constraint.Guideline
            android:id="@+id/leftGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="8dp" />

        <android.support.constraint.Guideline
            android:id="@+id/rightGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="8dp" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
